--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
   "bugs": {
     "url": "https://github.com/mercury99/1225915-typoteka-3/issues"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "homepage": "https://github.com/mercury99/1225915-typoteka-3#readme",
   "devDependencies": {
     "eslint": "8.2.0",
-    "eslint-config-htmlacademy": "0.6.0"
+    "eslint-config-htmlacademy": "0.6.0",
+    "husky": "^7.0.0",
+    "prettier": "2.4.1",
+    "pretty-quick": "^3.1.2"
   }
 }
