--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js",
-    "prepare": "husky install"
+    "start": "node ./src/service/service.js"
   },
   "repository": {
     "type": "git",
