--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js"
+    "start.dev": "nodemon ./src/main.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,11 @@
     "eslint": "8.2.0",
     "eslint-config-htmlacademy": "0.6.0",
     "husky": "^7.0.0",
+    "nodemon": "2.0.15",
     "prettier": "2.4.1",
     "pretty-quick": "^3.1.2"
+  },
+  "dependencies": {
+    "chalk": "4.1.2"
   }
 }
