--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
-    "start.dev": "nodemon ./src/main.js"
+    "start": "node ./src/service/service.js"
   },
   "repository": {
     "type": "git",
