--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./src/service/service.js",
   "scripts": {
     "eslint": "eslint --ext .js src/",
-    "start": "cross-env NODE_ENV=production node ./src/service/service.js --server",
-    "start::debug": "cross-env NODE_ENV=development nodemon ./src/service/service.js --server",
+    "start": "cross-env NODE_ENV=production node ./src/service/service.js",
+    "start::debug": "cross-env NODE_ENV=development nodemon ./src/service/service.js",
     "start-front-server": "nodemon ./src/express/express.js",
     "test": "npm run eslint && npm run jest",
     "jest": "jest"
@@ -33,9 +33,11 @@
     "supertest": "6.1.6"
   },
   "dependencies": {
+    "axios": "0.24.0",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
     "express": "4.17.1",
+    "multer": "1.4.4",
     "nanoid": "3.1.30",
     "pino": "7.5.1",
     "pug": "3.0.2"
