--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pino-pretty": "7.2.0",
     "prettier": "2.4.1",
     "pretty-quick": "^3.1.2",
+    "sqlite3": "5.0.2",
     "supertest": "6.1.6"
   },
   "dependencies": {
@@ -43,6 +44,6 @@
     "pg": "8.7.1",
     "pino": "7.5.1",
     "pug": "3.0.2",
-    "sequelize": "6.13.0"
+    "sequelize": "5.22.5"
   }
 }
