--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "0.24.0",
+    "bcrypt": "5.0.1",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
     "dotenv": "11.0.0",
