--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "eslint": "eslint --ext .js src/",
     "start": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
-    "start::debug": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js",
-    "start-front-server": "nodemon ./src/express/express.js",
+    "start::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js",
+    "start-front-server": "nodemon -r dotenv/config ./src/express/express.js",
     "test": "npm run eslint && npm run jest",
     "jest": "jest"
   },
@@ -37,9 +37,12 @@
     "axios": "0.24.0",
     "bcrypt": "5.0.1",
     "chalk": "4.1.2",
+    "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
+    "csurf": "1.11.0",
     "dotenv": "11.0.0",
     "express": "4.17.1",
+    "express-session": "1.17.2",
     "joi": "17.6.0",
     "multer": "1.4.4",
     "nanoid": "3.1.30",
