--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "./src/service/service.js",
   "scripts": {
     "eslint": "eslint --ext .js src/",
-    "start": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
-    "start::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js",
-    "start-front-server": "nodemon -r dotenv/config ./src/express/express.js",
+    "start-back-server": "cross-env NODE_ENV=production LOG_LEVEL=error node -r dotenv/config ./src/service/service.js --server",
+    "start-back-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon -r dotenv/config ./src/service/service.js --server",
+    "start-front-server": "node -r dotenv/config ./src/express/express.js",
+    "start-front-server::dev": "nodemon -r dotenv/config ./src/express/express.js",
+    "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
+    "start-dev-servers": "concurrently \"npm run start-back-server::debug\" \"npm run start-front-server::dev\"",
+    "start": "npm run start-servers",
+    "start::dev": "npm run start-dev-servers",
     "test": "npm run eslint && npm run jest",
     "jest": "jest"
   },
@@ -37,6 +42,7 @@
     "axios": "0.24.0",
     "bcrypt": "5.0.1",
     "chalk": "4.1.2",
+    "concurrently": "7.0.0",
     "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
     "csurf": "1.11.0",
